--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -22,6 +22,17 @@
   --ifm-color-primary-lightest: rgb(146, 224, 208);
 }
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  background-color: var(--ifm-navbar-background-color) !important;
+}
+
 .hero__title, .hero__subtitle,.btt {
   color: var(--ifm-color-secondary) !important;
 }
@@ -36,22 +47,18 @@
   margin-top: 24px;
 }
 
-.left {
-  display: grid;
-  float: left;
-  margin-left: 10px;
+.footer__link-item {
+  color: var(--ifm-link-color) !important;
+}
+.footer__col {
+  margin-bottom: 0px !important;
 }
 
-.right {
-  display: grid;
-  float: right;
-  margin-right: 10px;
-}
-
-.foot {
-  height: 70px;
-  background-color: var(--ifm-navbar-background-color);
-  box-shadow: var(--ifm-navbar-shadow);
+.footer {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  background-color: var(--ifm-navbar-background-color) !important;
+  box-shadow: var(--ifm-navbar-shadow) !important;
   display: flow-root;
   padding: 10px;
 }
