--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -15,11 +15,13 @@
   text-align: center;
   position: relative;
   overflow: hidden;
+  height: calc(100vh - 238px)
 }
 
 @media screen and (max-width: 966px) {
   .heroBanner {
     padding: 2rem;
+    height: auto;
   }
 }
 
