--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -20,12 +20,21 @@
   --ifm-color-primary-light: rgb(70, 203, 174);
   --ifm-color-primary-lighter: rgb(102, 212, 189);
   --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-code-font-size: 95%;
 }
 
-html {
-  height: 100%;
-  background-color: var(--ifm-navbar-background-color) !important;
+html[data-theme='dark'] .invertDark {
+  filter: invert(1.0)
 }
+
+.docusaurus-highlight-code-line {
+  background-color: rgb(72, 77, 91);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+
+
 .help {
   margin-top: 36px;
   height: calc(100vh - var(--ifm-navbar-height) - 270px) !important;
@@ -39,12 +48,6 @@ html {
   -webkit-box-shadow: 3px 3px 1px var(--ifm-contents-border-color);;
   -moz-box-shadow: 3px 3px 1px var(--ifm-contents-border-color);;
 }
-body {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: 1fr auto;
-  background-color: var(--ifm-navbar-background-color) !important;
-}
 
 .logo {
   height: 25em;
@@ -54,41 +57,12 @@ body {
   color: var(--ifm-color-secondary) !important;
 }
 
-
-.button.button--outline:hover {
-  color: var(--ifm-font-base-color) !important;
-}
-
-.index {
+.features_src-pages-styles-module {
   text-align: center;
-  margin-top: 24px;
 }
-
-.footer__link-item {
-  color: var(--ifm-link-color) !important;
-}
-.footer__col {
-  margin-bottom: 0px !important;
-}
-
-.footer {
-  
-  border-top-color: var(--ifm-contents-border-color);
-  border-top-style: solid;
-  border-top-width: 1px;
-  background-color: var(--ifm-navbar-background-color) !important;
-  display: flow-root;
-  padding: 10px;
-
-}
-
 
 @media only screen and (max-width: 600px) {
   .carousel-root {
     display: none;
   }
-}
-
-.col {
-  --ifm-col-width: 100vw;
 }
