--- a/source/overrides/partials/feedback.html
+++ b/source/overrides/partials/feedback.html
@@ -5,7 +5,7 @@
     <p>Suggest an edit to this page, or provide/view feedback for this page.</p>
     <div class="feedback-actions">
         <a class="md-button"
-            href="https://github.com/hacs/documentation/edit/experimental/source/{{page.file.src_path}}"
+            href="https://github.com/hacs/documentation/edit/{{config.remote_branch}}/source/{{page.file.src_path}}"
             target="_blank">
             <span class="twemoji">
                 {% include ".icons/fontawesome/solid/file-pen.svg" %}
@@ -24,7 +24,7 @@
             <span class="twemoji">
                 {% include ".icons/fontawesome/solid/comments.svg" %}
             </span>
-            View give feedback
+            View given feedback
         </a>
     </div>
 </div>
