--- a/source/overrides/partials/feedback.html
+++ b/source/overrides/partials/feedback.html
@@ -1,7 +1,7 @@
 <div class="feedback-container">
 <hr>
 <div class="admonition question">
-    <p class="admonition-title">Help us to improve the documentation</p>
+    <p class="admonition-title">Help us improve the documentation</p>
     <p>Suggest an edit to this page, or provide/view feedback for this page.</p>
     <div class="feedback-actions">
         <a class="md-button"
