--- a/source/assets/stylesheets/extra.css
+++ b/source/assets/stylesheets/extra.css
@@ -7,8 +7,8 @@
     --md-text-font: "Instrument Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
     --md-primary-fg-color: #41BDF5;
-    --md-primary-fg-color--light: #6dcaf6;
-    --md-primary-fg-color--dark: #1a6c92;
+    --md-primary-fg-color--light: #6DCAF6;
+    --md-primary-fg-color--dark: #0973A2;
 }
 
 [data-md-color-scheme=slate] {
