--- a/source/overrides/templates/home.html
+++ b/source/overrides/templates/home.html
@@ -16,6 +16,9 @@
         color: #fefefe !important;
         margin: 8px 4px;
     }
+    .md-flex {
+        justify-content: center;
+    }
 
     .md-typeset .md-button:focus, .md-typeset .md-button:hover {
         background-color: #fefefe;
@@ -49,3 +52,4 @@
 </section>
 {% endblock %}
 {% block content %}{% endblock %}
+{% block footer %}{% endblock %}    
