--- a/source/overrides/partials/content.html
+++ b/source/overrides/partials/content.html
@@ -53,13 +53,13 @@
                 Edit this page on GitHub
             </a>
             <br />
-            <sub><a href="/docs/contribute/documentation.md">Learn how to contribute</a></sub>
+            <sub><a href="/docs/contribute/documentation/">Learn how to contribute</a></sub>
         </div>
         <div class="footer-item">
             <h4>Still need help?</h4>
             <ul>
-                <li><a href="https://discord.gg/apgchf8">Create an issue</a></li>
-                <li><a href="/docs/help/issues.md" target="_blank">Join the Discord server</a></li>
+                <li><a href="/docs/help/issues.md">Create an issue</a></li>
+                <li><a href="https://discord.gg/apgchf8" target="_blank">Join the Discord server</a></li>
             </ul>
         </div>
     </div>
