--- a/source/overrides/templates/home.html
+++ b/source/overrides/templates/home.html
@@ -45,9 +45,9 @@
         </div>
     </div>
     <div class="md-flex md-typeset md-buttons">
-        <a href="/docs/use/index.md" class="md-button">Start using HACS</a>
-        <a href="/docs/publish/index.md" class="md-button">Publish with HACS</a>
-        <a href="/docs/contribute/index.md" class="md-button">Contribute to HACS</a>
+        <a href="/docs/use/" class="md-button">Start using HACS</a>
+        <a href="/docs/publish/" class="md-button">Publish with HACS</a>
+        <a href="/docs/contribute/" class="md-button">Contribute to HACS</a>
     </div>
 </section>
 {% endblock %}
