Replace the footer (#517)
* Remplace the footer

* fix links

* fix more links

--- a/source/overrides/templates/home.html
+++ b/source/overrides/templates/home.html
@@ -16,6 +16,9 @@
         color: #fefefe !important;
         margin: 8px 4px;
     }
+    .md-flex {
+        justify-content: center;
+    }
 
     .md-typeset .md-button:focus, .md-typeset .md-button:hover {
         background-color: #fefefe;
@@ -42,10 +45,11 @@
         </div>
     </div>
     <div class="md-flex md-typeset md-buttons">
-        <a href="/docs/use/index.md" class="md-button">Start using HACS</a>
-        <a href="/docs/publish/index.md" class="md-button">Publish with HACS</a>
-        <a href="/docs/contribute/index.md" class="md-button">Contribute to HACS</a>
+        <a href="/docs/use/" class="md-button">Start using HACS</a>
+        <a href="/docs/publish/" class="md-button">Publish with HACS</a>
+        <a href="/docs/contribute/" class="md-button">Contribute to HACS</a>
     </div>
 </section>
 {% endblock %}
 {% block content %}{% endblock %}
+{% block footer %}{% endblock %}    
