--- a/source/overrides/templates/home.html
+++ b/source/overrides/templates/home.html
@@ -34,6 +34,10 @@
     .mdx-container {
         min-height: calc(100vh - 180px);
     }
+
+    .mdx-container ul > li {
+        font-weight: normal;
+    }
 </style>
 <section class="mdx-container">
     <div class="md-flex md-typeset">
