Add resource-item class to resource items

--- a/source/overrides/partials/content.html
+++ b/source/overrides/partials/content.html
@@ -31,7 +31,7 @@
             <h4>Resources</h4>
 
             {% for link in config.extra.resources %}
-            <div>
+            <div class="resource-item">
                 <span class="twemoji">
                     {% include ".icons/" ~ link.icon ~ ".svg" %}
                 </span>
