Fix link to create an issue in footer

--- a/source/overrides/partials/content.html
+++ b/source/overrides/partials/content.html
@@ -58,7 +58,7 @@
         <div class="footer-item">
             <h4>Still need help?</h4>
             <ul>
-                <li><a href="/docs/help/issues.md">Create an issue</a></li>
+                <li><a href="/docs/help/issues/">Create an issue</a></li>
                 <li><a href="https://discord.gg/apgchf8" target="_blank">Join the Discord server</a></li>
             </ul>
         </div>
